--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,26 +11,61 @@
         android:id="@+id/settingsMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         android:elevation="8dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tableLayout"
-        android:background="@color/black"
-        >
+        app:layout_constraintTop_toTopOf="@+id/tableLayout">
+
+        <Button
+            android:id="@+id/restartSettingsButton"
+            android:layout_width="60dp"
+            android:layout_height="24dp"
+            android:background="@color/purpleButton"
+            android:gravity="center"
+            android:onClick="resetBoard"
+            android:padding="0dp"
+            android:text="RESTART"
+            android:textSize="10sp"
+            app:backgroundTint="@color/purpleButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/playerNumberLabel"
+            app:layout_constraintTop_toBottomOf="@+id/playerNumberLabel" />
+
+        <ImageButton
+            android:id="@+id/closeSettingsMenu"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@color/purpleButton"
+            android:onClick="closeSettings"
+            android:scaleType="fitCenter"
+            android:src="@drawable/close_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/incrementNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@color/purpleButton"
+            android:onClick="incrementPlayers"
+            android:scaleType="fitCenter"
+            android:src="@drawable/up_arrow"
             android:text="Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/decrementNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@color/purpleButton"
+            android:onClick="decrementPlayers"
+            android:scaleType="fitCenter"
+            android:src="@drawable/down_arrow"
             android:text="Button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -39,6 +74,8 @@
             android:id="@+id/maxPlayerNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:text="4"
             android:textColor="@color/whiteButton"
             android:textSize="24sp"
@@ -61,7 +98,7 @@
         android:id="@+id/settings"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="#673AB7"
+        android:background="@color/purpleButton"
         android:onClick="showSettings"
         android:scaleType="fitCenter"
         android:src="@drawable/settings_icon"
