--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@color/black"
         android:elevation="8dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,14 +21,15 @@
 
         <Button
             android:id="@+id/restartSettingsButton"
-            android:layout_width="60dp"
-            android:layout_height="24dp"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
             android:background="@color/purpleButton"
             android:gravity="center"
             android:onClick="resetBoard"
             android:padding="0dp"
             android:text="RESTART"
-            android:textSize="10sp"
+            android:textColor="@color/whiteButton"
+            android:textSize="16sp"
             app:backgroundTint="@color/purpleButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,8 +38,8 @@
 
         <ImageButton
             android:id="@+id/closeSettingsMenu"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@color/purpleButton"
             android:onClick="closeSettings"
             android:scaleType="fitCenter"
@@ -48,8 +49,8 @@
 
         <ImageButton
             android:id="@+id/incrementNumber"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@color/purpleButton"
             android:onClick="incrementPlayers"
             android:scaleType="fitCenter"
@@ -60,8 +61,8 @@
 
         <ImageButton
             android:id="@+id/decrementNumber"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@color/purpleButton"
             android:onClick="decrementPlayers"
             android:scaleType="fitCenter"
@@ -74,11 +75,11 @@
             android:id="@+id/maxPlayerNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="16dp"
             android:text="4"
             android:textColor="@color/whiteButton"
-            android:textSize="24sp"
+            android:textSize="32sp"
             app:layout_constraintBottom_toTopOf="@+id/decrementNumber"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/incrementNumber" />
@@ -89,7 +90,8 @@
             android:layout_height="wrap_content"
             android:text="Number of Players:"
             android:textColor="@color/whiteButton"
-            android:textSize="24sp"
+            android:textSize="28sp"
+            android:paddingLeft="12dp"
             app:layout_constraintBottom_toTopOf="@+id/decrementNumber"
             app:layout_constraintEnd_toStartOf="@+id/maxPlayerNumber" />
     </androidx.constraintlayout.widget.ConstraintLayout>
