--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:background="@color/purpleButton"
+        android:background="@drawable/roundedbutton"
         android:onClick="loginButtonClick"
         android:text="Login"
         app:backgroundTint="@color/purpleButton"
