--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
         android:id="@+id/settings"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/purpleButton"
+        android:background="@drawable/roundedbutton"
         android:onClick="showSettings"
         android:scaleType="fitCenter"
         android:src="@drawable/settings_icon"
@@ -112,12 +112,11 @@
         android:id="@+id/confirmButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/purpleButton"
+        android:background="@drawable/roundedbutton"
         android:onClick="confirmMove"
         android:text="CONFIRM"
         android:textColor="@color/whiteButton"
         android:textSize="24sp"
-        app:backgroundTint="@color/purpleButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,13 +126,12 @@
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/purpleButton"
+        android:background="@drawable/roundedbutton"
         android:onClick="resetBoard"
         android:text="RESET"
         android:textColor="@color/whiteButton"
         android:textSize="24sp"
         android:visibility="gone"
-        app:backgroundTint="@color/purpleButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomScoreBoard" />
