Starting Player increments perfectly, fixed reset score bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:id="@+id/restartSettingsButton"
             android:layout_width="80dp"
             android:layout_height="40dp"
-            android:background="@color/purpleButton"
+            android:background="@drawable/roundedbutton"
             android:gravity="center"
             android:onClick="resetBoard"
             android:padding="0dp"
@@ -40,7 +40,7 @@
             android:id="@+id/closeSettingsMenu"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@color/purpleButton"
+            android:background="@drawable/roundedbutton"
             android:onClick="closeSettings"
             android:scaleType="fitCenter"
             android:src="@drawable/close_icon"
@@ -51,7 +51,7 @@
             android:id="@+id/incrementNumber"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@color/purpleButton"
+            android:background="@drawable/roundedbutton"
             android:onClick="incrementPlayers"
             android:scaleType="fitCenter"
             android:src="@drawable/up_arrow"
@@ -63,7 +63,7 @@
             android:id="@+id/decrementNumber"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@color/purpleButton"
+            android:background="@drawable/roundedbutton"
             android:onClick="decrementPlayers"
             android:scaleType="fitCenter"
             android:src="@drawable/down_arrow"
