--- a/app/src/main/res/layout/online_lobby.xml
+++ b/app/src/main/res/layout/online_lobby.xml
@@ -11,6 +11,7 @@
         android:id="@+id/userInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -80,6 +81,7 @@
         android:id="@+id/playerHubs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userInfo">
@@ -95,54 +97,36 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/p1Request">
 
                 <View
                     android:id="@+id/p1BigSquare"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="@color/playerOne"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <View
-                    android:id="@+id/p1BigSquareMiddle"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p1BigSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p1BigSquare" />
 
                 <View
                     android:id="@+id/p1MiddleSquare"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerOne"
                     app:layout_constraintBottom_toBottomOf="@+id/p1BigSquare"
                     app:layout_constraintStart_toEndOf="@+id/p1BigSquare" />
 
                 <View
-                    android:id="@+id/p1MiddleSquareMiddle"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p1MiddleSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p1MiddleSquare" />
-
-                <View
                     android:id="@+id/p1SmallSquare"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerOne"
                     app:layout_constraintBottom_toBottomOf="@+id/p1MiddleSquare"
                     app:layout_constraintStart_toEndOf="@+id/p1MiddleSquare" />
@@ -165,9 +149,9 @@
                 android:id="@+id/p1Request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Request"
+                android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player1Username"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -176,10 +160,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
+                android:backgroundTint="@color/purpleButton"
                 android:text="Accept"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p1Request"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -197,54 +182,37 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/p2Request">
 
                 <View
                     android:id="@+id/p2BigSquare"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="@color/playerTwo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <View
-                    android:id="@+id/p2BigSquareMiddle"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p2BigSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p2BigSquare" />
 
                 <View
                     android:id="@+id/p2MiddleSquare"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerTwo"
                     app:layout_constraintBottom_toBottomOf="@+id/p2BigSquare"
                     app:layout_constraintStart_toEndOf="@+id/p2BigSquare" />
 
-                <View
-                    android:id="@+id/p2MiddleSquareMiddle"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p2MiddleSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p2MiddleSquare" />
 
                 <View
                     android:id="@+id/p2SmallSquare"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerTwo"
                     app:layout_constraintBottom_toBottomOf="@+id/p2MiddleSquare"
                     app:layout_constraintStart_toEndOf="@+id/p2MiddleSquare" />
@@ -267,9 +235,9 @@
                 android:id="@+id/p2Request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Request"
+                android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player2Username"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -278,10 +246,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Accept"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p2Request"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -299,54 +267,37 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/p3Request">
 
                 <View
                     android:id="@+id/p3BigSquare"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="@color/playerThree"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <View
-                    android:id="@+id/p3BigSquareMiddle"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p3BigSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p3BigSquare" />
 
                 <View
                     android:id="@+id/p3MiddleSquare"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerThree"
                     app:layout_constraintBottom_toBottomOf="@+id/p3BigSquare"
                     app:layout_constraintStart_toEndOf="@+id/p3BigSquare" />
 
-                <View
-                    android:id="@+id/p3MiddleSquareMiddle"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p3MiddleSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p3MiddleSquare" />
 
                 <View
                     android:id="@+id/p3SmallSquare"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerThree"
                     app:layout_constraintBottom_toBottomOf="@+id/p3MiddleSquare"
                     app:layout_constraintStart_toEndOf="@+id/p3MiddleSquare" />
@@ -369,9 +320,9 @@
                 android:id="@+id/p3Request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Request"
+                android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player3Username"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -380,10 +331,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Accept"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p3Request"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -401,54 +352,37 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/p4Request">
 
                 <View
                     android:id="@+id/p4BigSquare"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="@color/playerFour"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <View
-                    android:id="@+id/p4BigSquareMiddle"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p4BigSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p4BigSquare" />
 
                 <View
                     android:id="@+id/p4MiddleSquare"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerFour"
-                    app:layout_constraintBottom_toBottomOf="@+id/p4BigSquare"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/p4BigSquare" />
 
-                <View
-                    android:id="@+id/p4MiddleSquareMiddle"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/p4MiddleSquare"
-                    app:layout_constraintEnd_toEndOf="@+id/p4MiddleSquare" />
 
                 <View
                     android:id="@+id/p4SmallSquare"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginBottom="20dp"
                     android:background="@color/playerFour"
                     app:layout_constraintBottom_toBottomOf="@+id/p4MiddleSquare"
                     app:layout_constraintStart_toEndOf="@+id/p4MiddleSquare" />
@@ -471,9 +405,9 @@
                 android:id="@+id/p4Request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Request"
+                android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player4Username"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -486,6 +420,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Accept"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p4Request"
                 app:layout_constraintTop_toTopOf="parent" />
