--- a/app/src/main/res/layout/online_lobby.xml
+++ b/app/src/main/res/layout/online_lobby.xml
@@ -109,7 +109,7 @@
                     android:id="@+id/p1BigSquare"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/playerOne"
+                    android:background="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -151,6 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
+                android:onClick="sendRequest"
                 android:text="Send"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player1Username"
@@ -194,7 +195,7 @@
                     android:id="@+id/p2BigSquare"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/playerTwo"
+                    android:background="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -237,6 +238,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
+                android:onClick="sendRequest"
                 android:text="Send"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player2Username"
@@ -279,7 +281,7 @@
                     android:id="@+id/p3BigSquare"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/playerThree"
+                    android:background="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -322,6 +324,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
+                android:onClick="sendRequest"
                 android:text="Send"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player3Username"
@@ -364,7 +367,7 @@
                     android:id="@+id/p4BigSquare"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@color/playerFour"
+                    android:background="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -407,6 +410,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/roundedbutton"
+                android:onClick="sendRequest"
                 android:text="Send"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player4Username"
@@ -417,7 +421,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
                 android:text="Accept"
